src/test/ui/error-codes/E0442.stderr
error[E0442]: intrinsic return value has wrong type: found vector with length 16, expected length 8
  --> $DIR/E0442.rs:19:5
   |
LL |     fn aarch64_vld2_s8(x: *const i8) -> (i8x16, i8x16);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0442`.
